[package]
name = "alice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ariadne = "0.4.1"
chumsky = "0.9.3"
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tsify-next = "0.5.4"
wasm-bindgen = "0.2.92"
